# browser-use

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .python-version  AgentHistoryList.json  CLAUDE.md  Dockerfile  Dockerfile.fast  IMPLEMENTATION_SUMMARY.md  LICENSE  PR_CHANGES.md  Pipfile  RATE_LIMITING_SDK_NATIVE.md  README.md  SECURITY.md  SECURITY_FIX_REPORT.md  THINKING_FIELD_OPTIONAL_PR_SUMMARY.md  actions.json  agents.ipynb  bug_analysis.md  codebeaver.yml  conftest.py  debug_pydantic.py  example.py  fix_summary.md  git-functions.sh  instruction.md  promps.txt  pyproject.toml  pytest.ini  requirement.txt  requirements-dev.txt  requirements.txt  sample.ipynb  setup.py  structured_output_implementation_analysis.md  test_full_screen.py
.cursor/rules/: browser-use-rules.mdc
.github/: .git-blame-ignore-revs  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: 1_element_detection_bug.yml  2_bug_report.yml  3_feature_request.yml  4_docs_issue.yml  bug_report.yml  config.yml  docs_issue.yml  feature_request.yml
.github/workflows/: build-base-image.yml.disabled  build.yaml  ci.yml  claude.yml  cloud.yml  cloud_evals.yml  docker.yml  eval.yaml  laminar_eval.yaml  lint.yml  package.yaml  publish.yml  test.yaml
browser_use/: README.md  __init__.py  cli.py  config.py  constants.py  exceptions.py  logging_config.py  main.py  mcp_server.py  observability.py  utils.py
browser_use/agent/: __init__.py  cloud_events.py  gif.py  playwright_script_generator.py  playwright_script_helpers.py  prompts.py  service.py  system_prompt.md  system_prompt_flash.md  system_prompt_no_thinking.md  tests.py  utils.py  views.py
browser_use/browser/: __init__.py  browser.py  chrome.py  compat.py  context.py  dolphin_service.py  extensions.py  profile.py  service.py  session.py  types.py  utils.py  views.py
browser_use/controller/: service.py  service_i18n.py  views.py
browser_use/dom/: buildDomTree.js  history_tree_processor.py  process_dom.js  service.py  tree_processor.py  utils.py  views.py
browser_use/eventbus/: __init__.py  models.py  service.py
browser_use/filesystem/: file_system.py
browser_use/i18n/: __init__.py
browser_use/llm/: README.md  __init__.py  base.py  exceptions.py  messages.py  schema.py  utils.py  views.py
browser_use/mcp/: .dxtignore  __init__.py  __main__.py  client.py  controller.py  manifest.json  server.py
browser_use/sync/: __init__.py  auth.py  service.py
browser_use/telemetry/: __init__.py  service.py  views.py
browser_use/tokens/: service.py  views.py
docker/: README.md  build-base-images.sh
docs/: README.md  cli.mdx  dev_docs.md  development.mdx  docs.json  introduction.mdx  mint.json  quickstart.mdx
docs/api-reference/: check-balance.mdx  create-browser-profile.mdx  create-scheduled-task.mdx  delete-browser-profile.mdx  delete-scheduled-task.mdx  get-browser-profile.mdx  get-scheduled-task.mdx  get-task-gif.mdx  get-task-media.mdx  get-task-output-file.mdx  get-task-screenshots.mdx  get-task-status.mdx  get-task.mdx  index.mdx  list-browser-profiles.mdx  list-scheduled-tasks.mdx  list-tasks.mdx  pause-task.mdx  ping.mdx  resume-task.mdx  run-task.mdx  search-url.mdx  simple-search.mdx  stop-task.mdx  update-browser-profile.mdx  update-scheduled-task.mdx  upload-file-presigned-url.mdx  user.mdx
docs/cloud/: authentication.mdx  custom-sdk.mdx  implementation.mdx  openapi.mdx  quickstart.mdx  search.mdx  webhooks.mdx
docs/customize/: agent-settings.mdx  browser-settings.mdx  custom-functions.mdx  hooks.mdx  langchain-models.mdx  mcp-client.mdx  mcp-server.mdx  output-format.mdx  real-browser.mdx  sensitive-data.mdx  supported-models.mdx  system-prompt.mdx
docs/development/: contribution-guide.mdx  evaluations.mdx  local-setup.mdx  roadmap.mdx  (+3 more)
eval/: browsers.py  claude-3.5.py  claude-3.6.py  claude-3.7.py  claude.py  comprehensive_judge.py  cookie_judge.py  cookies.py  debug_cookie_judge.py  deepseek-r1.py  deepseek.py  gemini-1.5-flash.py  gemini-2.0-flash-lite.py  gemini-2.0-flash.py  gemini-2.5-preview.py  gpt-4.1.py  gpt-4o-no-boundingbox.py  gpt-4o-no-vision.py  gpt-4o-viewport-0.py  gpt-4o.py  gpt-o4-mini.py  grok.py  judge_system.py  laminar_eval.py  models.py  resource_monitoring.py  server.py  service copy.py  service.py  task_types.py  utils.py  web_judge.py
examples/: agent_output_processing.py  amazon_search.py  browserDemo.py  captcha.py  chain_of_agents.py  check_appointment.py  custom_output.py  custom_output_and_validate_output.py  custom_system_prompt.py  custom_user_agent.py  deepseek.py  discord_api.py  discord_example.py  explorations.py  extend_actions.py  file_upload.py  find_and_apply_to_jobs.py  flight_search.py  flight_search_example.ipynb  gemini.py  gradio.py  hugging_face.py  image_search.py  initial_actions.py  memory.py  multi-tab_handling.py  multiple_agents_same_browser.py  notification.py  ollama.py  online_coding_agent.py  parallel_agents.py  pause_agent.py  ping.py  post-twitter.py  qwen.py  restrict_urls.py  result_processing.py  save_trace.py  scrolling_page.py  simple.py  (+12 more)
scripts/: compile_translations.py
src/: __init__.py  utils.py
test_files/: kayak_page.html
tests/: conftest.py  debug_page_structure.py  extraction_test.py  httpx_client_test.py  process_dom_test.py  screenshot_test.py  sync_live.py  test_action_filters.py  test_action_params.py  test_action_registry_normalization.py  test_agent_actions.py  test_attach_chrome.py  test_autotrader.py  test_browser.py  test_browser_config_models.py  test_browser_session.py  test_browser_window_size_height.py  test_browser_window_size_height_no_viewport.py  test_clicks.py  test_context.py  test_controller.py  test_core_functionality.py  test_dropdown.py  test_dropdown_complex.py  test_dropdown_error.py  test_excluded_actions.py  test_full_screen.py  test_gif_path.py  test_mind2web.py  test_models.py  test_qwen.py  test_react_dropdown.py  test_save_conversation.py  test_self_registered_actions.py  test_sensitive_data.py  test_service.py  test_stress.py  test_tab_management.py  test_url_allowlist_security.py  test_vision.py  (+1 more)
(+433 files in other folders)
